--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_iconly: ^1.0.2
   gap: ^3.0.1
+
   card_swiper: ^3.0.1
+  #for image loading
   fancy_shimmer_image: ^2.0.3
+
   page_transition: ^2.1.0
-  # path_provider: ^2.1.1
+  # state management
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
